# GraphRAG-Agents

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .python-version  AGENTS.md  Azure-huggingface-workflow.md  Azure-mcp-workflow.md  CLAUDE.md  README.md  RUNBOOK.md  alembic.ini  azure-huggingface-workflow.md  commands.md  common_defs.py  config.json  flow.md  huggingface-workflow.md  project_trace.md  pyproject.toml  summary.md  tracker.md  workflow.md
.claude/: settings.json
migrations/: env.py  script.py.mako
migrations/versions/: 95d3d37e4060_phase_4_postgres_control_plane_baseline.py
scripts/: phase3_schema_check.py  phase4_document_version_safety_smoke.py  phase4_identifier_policy_check.py  phase4_postgres_smoke.py  phase5_neo4j_projection_smoke.py  phase5_neo4j_schema_smoke.py  phase6_chroma_vector_smoke.py  phase8_parse_manifest_check.py
src/: common_defs.py
tests/: test_azure_openai_models.py  test_canonicalization.py  test_capability_and_context.py  test_checkpoint_recovery.py  test_chunk_retention_contract.py  test_cli_and_removal.py  test_codegen_apply_graph.py  test_codegen_context_retriever.py  test_codegen_contracts.py  test_codegen_run_graph.py  test_common_defs_sync.py  test_config_huggingface.py  test_contracts.py  test_coverage_ledger.py  test_discovery_contract.py  test_discovery_failure_and_resume.py  test_editing_tools.py  test_end_to_end_workflow.py  test_framework_indexing.py  test_gemini_adapter.py  test_huggingface_gpu.py  test_huggingface_models.py  test_identifiers.py  test_ingestion_graph.py  test_ingestion_persistence_boundaries.py  test_json_output.py  test_knowledge_extraction_agent.py  test_knowledge_graph_foundation.py  test_knowledge_graph_readiness.py  test_llm_patch_producer.py  test_master_projection.py  test_neo4j_projection_reconciliation.py  test_neo4j_store.py  test_postgres_artifacts.py  test_requirement_discovery_agent.py  test_requirement_identity.py  test_requirement_memory.py  test_requirement_repair.py  test_retrieval_isolation.py  test_scenario_action_mapper.py  (+18 more)
tools/: docstring_audit.py
(+181 files in other folders)
