[project]
name = "multi-agentic-graph-rag"
version = "0.1.0"
description = "Multi-Agentic Knowledge-Graph RAG platform"
readme = "README.md"
authors = [
    { name = "Rajdepak Mishra", email = "rdmpro2020@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "charset-normalizer>=3.4.7",
    "chromadb>=1.5.9",
    "langchain-core>=1.4.8",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "neo4j>=6.2.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "typer>=0.26.8",
]


[project.scripts]
marag = "multi_agentic_graph_rag.cli:app"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.25.3",
    "openai>=2.44.0",
]
local-llm = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.16.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]


[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/multi_agentic_graph_rag"]


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["multi_agentic_graph_rag"]
exclude = [
    "^runtime/",
    "^generated_artifacts/",
    "^\\.global_cache/",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
